<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jvang.cs.cis3334.intentcalltext.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_3_contacts"
        android:id="@+id/TextViewTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Contact 1:"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewContact1"
            tools:ignore="HardcodedText"
            android:layout_weight="1" />

        <Button
            android:text="@string/call1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCall1"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerText1"
            android:layout_weight="1"
            android:entries="@array/textMsg"/>

        <Button
            android:text="@string/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonText1"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/contact_2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewContact2"
            android:layout_weight="1" />

        <Button
            android:text="@string/call2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCall2"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerText2"
            android:layout_weight="1"
            android:entries="@array/textMsg"/>

        <Button
            android:text="Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonText2"
            android:layout_weight="1"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Contact 3:"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewContact3"
            tools:ignore="HardcodedText"
            android:layout_weight="1" />

        <Button
            android:text="@string/call3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCall3"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerText3"
            android:layout_weight="1"
            android:entries="@array/textMsg"/>

        <Button
            android:text="@string/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonText3"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
